SERVER-78786 Don't strip internal session fields in cluster cursors
(cherry picked from commit fd6296cfb951f0593d94ae512c795f02dccf729f)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -404,6 +404,10 @@ last-continuous:
     ticket: SERVER-77386
   - test_file: jstests/replsets/config_txns_reaping_interrupt.js
     ticket: SERVER-78187
+  - test_file: jstests/sharding/internal_txns/transaction_api_distributed_from_shard.js
+    ticket: SERVER-78786
+  - test_file: jstests/sharding/internal_txns/transaction_api_test_command_basic.js
+    ticket: SERVER-78786
   suites: null
 last-lts:
   all:
@@ -889,4 +893,8 @@ last-lts:
     ticket: SERVER-78414
   - test_file: jstests/replsets/config_txns_reaping_interrupt.js
     ticket: SERVER-78187
+  - test_file: jstests/sharding/internal_txns/transaction_api_distributed_from_shard.js
+    ticket: SERVER-78786
+  - test_file: jstests/sharding/internal_txns/transaction_api_test_command_basic.js
+    ticket: SERVER-78786
   suites: null
