SERVER-77506 Add pessimistic checking to verify that no chunk has moved for the collection being referenced since transaction started
(cherry picked from commit 4086290c7cee228b9bf53ec0ecc6c7bc48f7e65b)

Co-authored-by: Kaloian Manassiev <kaloian.manassiev@mongodb.com>

This additionally includes the changes to transaction_router.h,
transaction_router.cpp, and cluster_commands_helpers.cpp from commit
21bebca30d1682c29e88cf8c520f0793b13e0431.

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -415,6 +415,8 @@ last-continuous:
     ticket: SERVER-80203
   - test_file: jstests/core/timeseries/timeseries_collection_uuid.js
     ticket: SERVER-79446
+  - test_file: jstests/sharding/multi_collection_transaction_placement_conflict_workaround.js
+    ticket: SERVER-77506
   suites: null
 last-lts:
   all:
@@ -878,4 +880,6 @@ last-lts:
     ticket: SERVER-80203
   - test_file: jstests/core/timeseries/timeseries_collection_uuid.js
     ticket: SERVER-79446
+  - test_file: jstests/sharding/multi_collection_transaction_placement_conflict_workaround.js
+    ticket: SERVER-77506
   suites: null
