--- a/etc/evergreen_yml_components/variants/misc_release.yml
+++ b/etc/evergreen_yml_components/variants/misc_release.yml
@@ -1,5 +1,29 @@
 # All remaining release variants not included in other files.
 
+variables:
+# THIS WAS COPIED FROM EVERGREEN.YML - ANY MODIFICATIONS HERE SHOULD ALSO BE MADE IN THAT FILE.
+- &amazon_linux2_arm64_compile_variant_dependency
+  depends_on:
+  - name: archive_dist_test_debug
+    variant: &amazon_linux2_arm64_compile_variant_name amazon-linux2-arm64-compile
+  - name: version_gen
+    variant: generate-tasks-for-version
+    # This is added because of EVG-18211.
+    # Without this we are adding extra dependencies on evergreen and it is causing strain
+    omit_generated_tasks: true
+
+# THIS WAS COPIED FROM EVERGREEN.YML - ANY MODIFICATIONS HERE SHOULD ALSO BE MADE IN THAT FILE.
+- &linux_arm64_generic_expansions
+  multiversion_platform: amazon2
+  multiversion_edition: enterprise
+  multiversion_architecture: aarch64
+  packager_arch: aarch64
+  packager_distro: amazon2
+  repo_edition: enterprise
+  large_distro_name: amazon2-arm64-large
+  num_scons_link_jobs_available: 0.99
+  compile_variant: *amazon_linux2_arm64_compile_variant_name
+
 buildvariants:
 - name: amazon2
   display_name: Amazon Linux 2
@@ -357,6 +381,108 @@ buildvariants:
     - ubuntu2204-large
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
+
+- <<: *amazon_linux2_arm64_compile_variant_dependency
+  name: &amazon-linux2-arm64-fixed-concurrent-transactions amazon-linux2-arm64-fixed-concurrent-transactions
+  display_name: "Amazon Linux 2 arm64 (Fixed Concurrent Transactions)"
+  cron: "0 0 * * 0" # From the ${project_nightly_cron} parameter. Runs every Sunday.
+  modules:
+    - enterprise
+  run_on:
+    - amazon2-arm64-small
+  expansions:
+    <<: *linux_arm64_generic_expansions
+    test_flags: >-
+      --mongodSetParameters="{storageEngineConcurrencyAdjustmentAlgorithm: fixedConcurrentTransactions}"
+      --excludeWithAnyTags=incompatible_with_amazon_linux,incompatible_with_shard_merge,requires_external_data_source
+    scons_cache_scope: shared
+    scons_cache_mode: all
+    commit_queue_alternate_cache: amazon-linux2-arm64-compile
+    has_packages: false
+  tasks:
+  - name: analyze_shard_key_jscore_passthrough_gen
+  - name: query_golden_classic
+  - name: lint_fuzzer_sanity_patch
+  - name: test_api_version_compatibility
+  - name: check_feature_flag_tags
+  - name: check_for_todos
+  - name: .aggfuzzer !.feature_flag_guarded
+  - name: .aggregation !.feature_flag_guarded
+  - name: aggregation_repeat_queries
+  - name: audit
+  - name: .auth
+  - name: buildscripts_test
+  - name: resmoke_end2end_tests
+  - name: unittest_shell_hang_analyzer_gen
+  - name: .causally_consistent !.sharding
+  - name: .change_streams
+  - name: .change_stream_fuzzer
+  # TODO SERVER-57866: Remove the explicit mentions of change stream multitenant suites.
+  - name: change_streams_multitenant_passthrough
+  - name: cqf
+  - name: cqf_disabled_pipeline_opt
+  - name: cqf_parallel
+  - name: .misc_js
+  - name: .clustered_collections
+  - name: .concurrency !.large !.ubsan !.no_txns
+  - name: .concurrency .large !.ubsan !.no_txns
+  - name: .config_fuzzer !.large
+  - name: .config_fuzzer .large
+    distros:
+    - amazon2-arm64-large
+  - name: .config_fuzzer_stress
+    distros:
+    - amazon2-arm64-large
+  - name: disk_wiredtiger
+  - name: .encrypt
+  - name: feature_flag_multiversion_gen
+  - name: idl_tests
+  - name: initial_sync_fuzzer_gen
+  - name: .jscore .common
+  - name: jsCore_min_batch_repeat_queries_ese_gsm
+  - name: jsCore_txns_large_txns_format
+  - name: jsCore_wildcard_indexes
+  - name: json_schema
+  - name: .jstestfuzz !.flow_control  # Flow control jstestfuzz take longer.
+  - name: libunwind_tests
+  - name: mqlrun
+  - name: .multi_shard
+  - name: multi_stmt_txn_jscore_passthrough_with_migration_gen
+  - name: multiversion_gen
+  - name: .query_fuzzer
+  - name: .random_multiversion_ds
+  - name: .read_write_concern .large
+  - name: .read_write_concern !.large
+  - name: .replica_sets !.encrypt !.auth !.ignore_non_generated_replica_sets_jscore_passthrough
+  - name: replica_sets_jscore_passthrough_gen
+  - name: replica_sets_api_version_jscore_passthrough_gen
+  - name: replica_sets_reconfig_jscore_passthrough_gen
+  - name: replica_sets_reconfig_jscore_stepdown_passthrough_gen
+  - name: replica_sets_reconfig_kill_primary_jscore_passthrough_gen
+  - name: retryable_writes_jscore_passthrough_gen
+  - name: retryable_writes_jscore_stepdown_passthrough_gen
+  - name: .read_only
+  - name: .rollbackfuzzer
+  - name: sasl
+  - name: search
+  - name: search_auth
+  - name: search_pinned_connections_auth
+  - name: search_ssl
+  - name: secondary_reads_passthrough_gen
+  - name: .serverless
+    distros:
+    - amazon2-arm64-large
+  - name: session_jscore_passthrough
+  - name: .shard_split
+  - name: .sharding .jscore !.wo_snapshot !.multi_stmt
+  - name: sharding_api_version_jscore_passthrough_gen
+  - name: sharding_api_strict_passthrough_gen
+  - name: .sharding .txns
+  - name: .sharding .common
+  - name: sharding_max_mirroring_opportunistic_secondary_targeting_ese_gcm_gen
+  - name: sharded_multi_stmt_txn_jscore_passthrough
+  - name: streams
+  - name: .updatefuzzer
 
 - name: enterprise-amazon2023
   display_name: "Enterprise Amazon Linux 2023"
