SERVER-78135 re-enable concurrency_replication_wiredtiger_cursor_sweeps on macOS
(cherry picked from commit db971f3c0491fd2479e1de08fd81cd70fb400c92)

--- a/etc/evergreen_yml_components/variants/misc_release.yml
+++ b/etc/evergreen_yml_components/variants/misc_release.yml
@@ -2657,8 +2657,7 @@ buildvariants:
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
-    # TODO(SERVER-78135): remove !.cursor_sweeps.
-  - name: .concurrency !.ubsan !.no_txns !.kill_terminate !.cursor_sweeps
+  - name: .concurrency !.ubsan !.no_txns !.kill_terminate
   - name: disk_wiredtiger
   - name: free_monitoring
   - name: initial_sync_fuzzer_gen
@@ -2712,8 +2711,7 @@ buildvariants:
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
-    # TODO(SERVER-78135): remove !.cursor_sweeps.
-  - name: .concurrency !.ubsan !.no_txns !.kill_terminate !.cursor_sweeps
+  - name: .concurrency !.ubsan !.no_txns !.kill_terminate
   - name: disk_wiredtiger
   - name: free_monitoring
   - name: initial_sync_fuzzer_gen
