SERVER-78150 - Cluster Fsync Unlock Command
(cherry picked from commit d784ee65da224838e6ae70794a7e125c2cfb6efb)

--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -61,6 +61,8 @@ env.Library(
         'cluster_fle2_compact_cmd.cpp',
         'cluster_fle2_get_count_info_cmd.cpp',
         'cluster_fsync_cmd.cpp',
+        'cluster_fsync_unlock_cmd.cpp',
+        'cluster_fsync_unlock_cmd.idl',
         'cluster_ftdc_commands.cpp',
         'cluster_get_cluster_parameter_cmd.cpp',
         'cluster_get_shard_version_cmd.cpp',
