SERVER-78855 Use snapshot isolation for Queryable Encryption transactions
(cherry picked from commit 6af0418e8f557f76e195b4a0aca5acb4d0372312)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -897,4 +897,6 @@ last-lts:
     ticket: SERVER-78786
   - test_file: jstests/sharding/internal_txns/transaction_api_test_command_basic.js
     ticket: SERVER-78786
+  - test_file: src/mongo/db/modules/enterprise/jstests/fle2/txn_snapshot.js
+    ticket: SERVER-78855
   suites: null
