SERVER-76299 Report writeConflicts in serverStatus on secondaries.
(cherry picked from commit 251dfc8c42679cd1c3527943bc641214cfcf1c1f)

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -653,6 +653,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/commands/mongod_fsync',
         '$BUILD_DIR/mongo/db/concurrency/exception_util',
         '$BUILD_DIR/mongo/db/concurrency/lock_manager',
+        '$BUILD_DIR/mongo/db/curop_metrics',
         '$BUILD_DIR/mongo/db/session/session_catalog_mongod',
         '$BUILD_DIR/mongo/db/storage/storage_control',
         'repl_server_parameters',
