SERVER-28177 Avoid re-parsing when converting find to aggregate request
When we get a find request on a view, we first translate it to an
aggregate request, because view resolution works by concatenating
aggregation pipelines. Previously we were converting an already-parsed
FindCommandRequest to a BSONObj, and then parsing that again as an
aggregation. Now we convert directly to AggregateCommandRequest, which
seems simpler and should be more efficient.

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -65,6 +65,7 @@ env.Library(
         'aggregation_request_helper.cpp',
         'aggregate_command.idl',
         'external_data_source_option.idl',
+        'query_request_conversion.cpp',
     ], LIBDEPS=[
         '$BUILD_DIR/mongo/db/exec/document_value/document_value',
         '$BUILD_DIR/mongo/db/query/command_request_response',
