SERVER-78813: Fix commit point propagation for exhaust oplog cursors
(cherry picked from commit 12f70e5fdff32cd733d1fde7a651bdfbae389e8b)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -412,6 +412,8 @@ last-continuous:
     ticket: SERVER-79136
   - test_file: jstests/core/timeseries/timeseries_create_collection.js
     ticket: SERVER-77382
+  - test_file: jstests/replsets/commit_point_propagation_with_oplog_exhaust_cursor.js
+    ticket: SERVER-78813
   suites: null
 
 last-lts:
@@ -906,4 +908,6 @@ last-lts:
     ticket: SERVER-79136
   - test_file: jstests/core/timeseries/timeseries_create_collection.js
     ticket: SERVER-77382
+  - test_file: jstests/replsets/commit_point_propagation_with_oplog_exhaust_cursor.js
+    ticket: SERVER-78813
   suites: null
