SERVER-79136 Block $group min/max rewrite in TS if there is a non-meta filter
(cherry picked from commit 1a6d2cc2f17e91f81714b009ee7840c1099f5440)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -410,6 +410,8 @@ last-continuous:
     ticket: SERVER-78786
   - test_file: jstests/sharding/internal_txns/transaction_api_test_command_basic.js
     ticket: SERVER-78786
+  - test_file: jstests/core/timeseries/timeseries_groupby_reorder.js
+    ticket: SERVER-79136
   suites: null
 last-lts:
   all:
@@ -901,4 +903,6 @@ last-lts:
     ticket: SERVER-78786
   - test_file: src/mongo/db/modules/enterprise/jstests/fle2/txn_snapshot.js
     ticket: SERVER-78855
+  - test_file: jstests/core/timeseries/timeseries_groupby_reorder.js
+    ticket: SERVER-79136
   suites: null
