SERVER-78153 - Lock/Unlock Config Server with Fsync/Fsync Unlock CMDs.
(cherry picked from commit cdabcdf5f58683b7de6b410787ccc70542551e47)

--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -253,6 +253,9 @@ selector:
   # test doesn't pass reliably when there is continuous stepdown on the config server.
   - jstests/sharding/analyze_shard_key/sample_rates_sharded.js
 
+  # Test runs command on a config shard and does not shutdown safely upon transitioning to a dedicated config server.
+  - jstests/sharding/fsync_lock_unlock.js
+
   exclude_with_any_tags:
   - does_not_support_stepdowns
 
