--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -6,6 +6,8 @@ stepback: false
 parameters:
   - key: patch_compile_flags
     description: "Additional SCons flags to be applied during scons compile invocations in this patch"
+  - key: reuse_compile_from
+    description: "Version_id of the commit/patch to reuse the compile artifacts from, e.g., sys_perf_7.0_37d84072b5c5b9fd723db5fa133fb202ad2317f1"
 
 
 variables:
@@ -291,26 +293,30 @@ functions:
       params:
         working_dir: src
         script: |
-          set -o errexit
-          set -o verbose
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            set -o errexit
+            set -o verbose
 
-          source "${workdir}/compile_venv/bin/activate"
+            source "${workdir}/compile_venv/bin/activate"
 
-          # We get the raw version string (r1.2.3-45-gabcdef) from git
-          # And append "-sys-perf" at the end
-          export MONGO_VERSION=$(git describe --abbrev=7)
-          MONGO_VERSION="$MONGO_VERSION-sys-perf"
+            # We get the raw version string (r1.2.3-45-gabcdef) from git
+            # And append "-sys-perf" at the end
+            export MONGO_VERSION=$(git describe --abbrev=7)
+            MONGO_VERSION="$MONGO_VERSION-sys-perf"
 
-          # If this is a patch build, we add the patch version id to the version string so we know
-          # this build was a patch, and which evergreen task it came from
-          if [ "${is_patch|false}" = "true" ]; then
-            MONGO_VERSION="$MONGO_VERSION-patch-${version_id}"
+            # If this is a patch build, we add the patch version id to the version string so we know
+            # this build was a patch, and which evergreen task it came from
+            if [ "${is_patch|false}" = "true" ]; then
+              MONGO_VERSION="$MONGO_VERSION-patch-${version_id}"
+            fi
+
+            # This script handles sanitizing the version string for use during SCons build
+            # and when pushing artifacts up to S3.
+            IS_PATCH=${is_patch|false} IS_COMMIT_QUEUE=${is_commit_queue|false} \
+              buildscripts/generate_version_expansions.py --out version_expansions.yml
+          else
+            touch version_expansions.yml
           fi
-
-          # This script handles sanitizing the version string for use during SCons build
-          # and when pushing artifacts up to S3.
-          IS_PATCH=${is_patch|false} IS_COMMIT_QUEUE=${is_commit_queue|false} \
-            buildscripts/generate_version_expansions.py --out version_expansions.yml
     - command: expansions.update
       params:
         file: src/version_expansions.yml
@@ -318,14 +324,18 @@ functions:
       params:
         working_dir: src
         script: |
-          set -o errexit
-          set -o verbose
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            set -o errexit
+            set -o verbose
 
-          # This script handles whether the SCons cache should be used
-          source "${workdir}/compile_venv/bin/activate"
-          SCONS_CACHE_MODE=${scons_cache_mode|} USE_SCONS_CACHE=${use_scons_cache|false} \
-            IS_PATCH=${is_patch|false} IS_COMMIT_QUEUE=${is_commit_queue|false} \
-            python buildscripts/generate_compile_expansions.py --out compile_expansions.yml
+            # This script handles whether the SCons cache should be used
+            source "${workdir}/compile_venv/bin/activate"
+            SCONS_CACHE_MODE=${scons_cache_mode|} USE_SCONS_CACHE=${use_scons_cache|false} \
+              IS_PATCH=${is_patch|false} IS_COMMIT_QUEUE=${is_commit_queue|false} \
+              python buildscripts/generate_compile_expansions.py --out compile_expansions.yml
+          else
+            touch compile_expansions.yml
+          fi
     - command: expansions.update
       params:
         file: src/compile_expansions.yml
@@ -338,22 +348,28 @@ functions:
       params:
         working_dir: src/mongo-tools/src/github.com/mongodb/mongo-tools
         script: |
-          set -o verbose
-          set -o errexit
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            set -o verbose
+            set -o errexit
 
-          # make sure newlines in the scripts are handled correctly by windows
-          if [ "Windows_NT" = "$OS" ]; then
-            set -o igncr
-          fi;
+            # make sure newlines in the scripts are handled correctly by windows
+            if [ "Windows_NT" = "$OS" ]; then
+              set -o igncr
+            fi;
 
-          # set_goenv provides set_goenv(), print_ldflags() and print_tags() used below
-          . ./set_goenv.sh
-          GOROOT="" set_goenv || exit
-          go version
+            # set_goenv provides set_goenv()
+            . ./set_goenv.sh
+            GOROOT="" set_goenv || exit
+            go version
 
-          build_tools="bsondump mongostat mongofiles mongoexport mongoimport mongorestore mongodump mongotop"
-          if [ "${build_mongoreplay}" = "true" ]; then
-              build_tools="$build_tools mongoreplay"
+            build_tools="bsondump mongostat mongofiles mongoexport mongoimport mongorestore mongodump mongotop"
+            if [ "${build_mongoreplay}" = "true" ]; then
+                build_tools="$build_tools mongoreplay"
+            fi
+            for i in $build_tools; do
+                go build -o "../../../../../mongodb/bin/$i${exe|}" $i/main/$i.go
+                "../../../../../mongodb/bin/$i${exe|}" --version
+            done
           fi
           for i in $build_tools; do
               go build -ldflags "$(print_ldflags)" ${args} -tags "$(print_tags ${tooltags})" -o "../../../../../mongodb/bin/$i${exe|}" $i/main/$i.go
@@ -363,39 +379,55 @@ functions:
       params:
         working_dir: src
         script: |
-          set -o errexit
-          set -o verbose
-          source "${workdir}/compile_venv/bin/activate"
-          python ./buildscripts/idl/gen_all_feature_flag_list.py
-          mkdir -p mongodb/feature_flags
-          cp ./all_feature_flags.txt mongodb/feature_flags
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            set -o errexit
+            set -o verbose
+            source "${workdir}/compile_venv/bin/activate"
+            python ./buildscripts/idl/gen_all_feature_flag_list.py
+            mkdir -p mongodb/feature_flags
+            cp ./all_feature_flags.txt mongodb/feature_flags
+          fi
     - command: shell.exec
       params:
         working_dir: src
         script: |
-          set -o errexit
-          set -o verbose
-          source "${workdir}/compile_venv/bin/activate"
-          python ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} $extra_args install-core install-jstestshell SPLIT_DWARF=0 MONGO_VERSION=${version} DESTDIR=$(pwd)/mongodb ${patch_compile_flags|}
-          mkdir -p mongodb/jstests/hooks
-          if [ -d jstests/hooks ]
-          then
-            echo "Fetching JS test DB correctness checks from directory jstests"
-            cp -a jstests/* mongodb/jstests
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            set -o errexit
+            set -o verbose
+            source "${workdir}/compile_venv/bin/activate"
+            python ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} $extra_args install-core install-jstestshell SPLIT_DWARF=0 MONGO_VERSION=${version} DESTDIR=$(pwd)/mongodb ${patch_compile_flags|}
+            mkdir -p mongodb/jstests/hooks
+            if [ -d jstests/hooks ]
+            then
+              echo "Fetching JS test DB correctness checks from directory jstests"
+              cp -a jstests/* mongodb/jstests
 
-            echo "Now adding our own special run_validate_collections.js wrapper"
-            mv mongodb/jstests/hooks/run_validate_collections.js mongodb/jstests/hooks/run_validate_collections.actual.js
+              echo "Now adding our own special run_validate_collections.js wrapper"
+              mv mongodb/jstests/hooks/run_validate_collections.js mongodb/jstests/hooks/run_validate_collections.actual.js
 
-            cat << EOF > mongodb/jstests/hooks/run_validate_collections.js
-            print("NOTE: run_validate_collections.js will skip the oplog!");
-            TestData = { skipValidationNamespaces: ['local.oplog.rs'] };
-            load('jstests/hooks/run_validate_collections.actual.js');
+              cat << EOF > mongodb/jstests/hooks/run_validate_collections.js
+              print("NOTE: run_validate_collections.js will skip the oplog!");
+              TestData = { skipValidationNamespaces: ['local.oplog.rs'] };
+              load('jstests/hooks/run_validate_collections.actual.js');
           EOF
+            fi
+            tar czf mongodb${compile_variant|}.tar.gz mongodb
+            # Put all matching mongo debug from the build directory in an archive in the same location
+            # as the library archive (i.e. mongodb/bin).
+            tar czvf mongodb${compile_variant|}-debugsymbols.tar.gz $(find ./build/cached -name mongo\*.debug -type f) --xform 's:^.*/:mongodb/bin/:'
           fi
-          tar czf mongodb${compile_variant|}.tar.gz mongodb
-          # Put all matching mongo debug from the build directory in an archive in the same location
-          # as the library archive (i.e. mongodb/bin).
-          tar czvf mongodb${compile_variant|}-debugsymbols.tar.gz $(find ./build/cached -name mongo\*.debug -type f) --xform 's:^.*/:mongodb/bin/:'
+    - command: shell.exec
+      params:
+        working_dir: src
+        script: |
+          if [ -n "${reuse_compile_from}" ] && [ "${is_patch|false}" = "true" ]; then
+            set -o errexit
+            set -o verbose
+
+            source "${workdir}/compile_venv/bin/activate"
+            python buildscripts/download_sys_perf_binaries.py -v ${reuse_compile_from} -b ${build_variant} -u ${evergreen_api_user} -k ${evergreen_api_key}
+            mv binary.tar.gz mongodb${compile_variant|}.tar.gz
+          fi
     - command: s3.put
       params:
         aws_key: ${aws_key}
@@ -414,6 +446,7 @@ functions:
         remote_file: ${project_dir}/${version_id}/${revision}/${platform}/mongodb${compile_variant|}-${version_id}-debugsymbols.tar.gz
         bucket: mciuploads
         permissions: public-read
+        optional: true
         content_type: ${content_type|application/x-gzip}
         display_name: mongo-debugsymbols.tgz
   ###
@@ -428,10 +461,15 @@ functions:
           set -o errexit
           set -o verbose
           source "${workdir}/compile_venv/bin/activate"
-          python ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} $extra_args SPLIT_DWARF=0 archive-mongo-crypt-dev MONGO_VERSION=${version} DESTDIR=$(pwd)/crypt-lib-${version} PKGDIR=$(pwd) ${patch_compile_flags|}
-          # Put all matching mongo .debug from the build directory in an archive in the same location
-          # as the library archive (i.e. lib).
-          tar czvf mongo-crypt-dev-debugsymbols.tar.gz $(find ./build/cached -name mongo\*.debug -type f) --xform 's:^.*/:lib/:'
+          if [ -z "${reuse_compile_from}" ] || [ "${is_patch|false}" = "false" ]; then
+            python ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} $extra_args SPLIT_DWARF=0 archive-mongo-crypt-dev MONGO_VERSION=${version} DESTDIR=$(pwd)/crypt-lib-${version} PKGDIR=$(pwd) ${patch_compile_flags|}
+            # Put all matching mongo .debug from the build directory in an archive in the same location
+            # as the library archive (i.e. lib).
+            tar czvf mongo-crypt-dev-debugsymbols.tar.gz $(find ./build/cached -name mongo\*.debug -type f) --xform 's:^.*/:lib/:'
+          else
+            python buildscripts/download_sys_perf_binaries.py -v ${reuse_compile_from} -b ${build_variant} -u ${evergreen_api_user} -k ${evergreen_api_key}
+            mv binary.tar.gz mongo-crypt-dev.tgz
+          fi
     - command: s3.put
       params:
         aws_key: ${aws_key}
@@ -451,6 +489,7 @@ functions:
         bucket: mciuploads
         permissions: public-read
         content_type: ${content_type|application/x-gzip}
+        optional: true
         display_name: mongo_crypt_shared_v1-debugsymbols.tgz
   ###
 
