SERVER-79357 shard local aggregation request  don't apply snapshot read concern          (cherry-picked from 71982fab94bda7b5661a84a261b18d4c74efe646)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1896,6 +1896,7 @@ env.Library(
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/db/repl/repl_coordinator_interface',
         'dbdirectclient',
+        'rw_concern_d',
     ],
 )
 
