SERVER-79138 Fix data race in AuthorizationSessionTest fixture
(cherry picked from commit 9eb4fbf166ba9ae6cec9876940f3813a99546379)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -2088,6 +2088,7 @@ env.Library(
     ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/util/clock_source_mock',
+        'auth/auth_impl_internal',
         'catalog/catalog_impl',
         'catalog/database_holder',
         'commands/mongod',
