--- a/etc/generate_subtasks_config.yml
+++ b/etc/generate_subtasks_config.yml
@@ -8,7 +8,9 @@ build_variant_large_distro_exceptions:
   - enterprise-amazon2
   - enterprise-amazon2-arm64
   - enterprise-amazon2023
+  - enterprise-amazon2023-lto
   - enterprise-amazon2023-arm64
+  - enterprise-amazon2023-arm64-lto
   - enterprise-debian10-64
   - enterprise-debian11-64
   - enterprise-linux-64-amazon-ami
