SERVER-79316 do not run packager on dynamically linked variants

--- a/etc/evergreen_yml_components/variants/ibm.yml
+++ b/etc/evergreen_yml_components/variants/ibm.yml
@@ -70,6 +70,7 @@ buildvariants:
   display_name: Enterprise RHEL 8.1 PPC64LE Shared
   expansions:
     <<: *enterprise-rhel-81-ppc64le-expansions-template
+    has_packages: false
     compile_flags: >-
       --link-model=dynamic
       --ssl
