SERVER-79497 Backport vectorSearch to 7.0
Co-authored-by: Chi-I Huang <chii.huang@mongodb.com>
Co-authored-by: Hima Sheth <hima.sheth@mongodb.com>

--- a/buildscripts/resmokeconfig/suites/vector_search.yml
+++ b/buildscripts/resmokeconfig/suites/vector_search.yml
@@ -2,8 +2,7 @@ test_kind: js_test
 
 selector:
   roots:
-  - src/mongo/db/modules/*/jstests/search/*.js
-  - src/mongo/db/modules/*/jstests/mongot/*.js
+  - src/mongo/db/modules/*/jstests/vector_search/*.js
   exclude_with_any_tags:
   - requires_auth
 
