--- a/etc/evergreen_yml_components/variants/misc_release.yml
+++ b/etc/evergreen_yml_components/variants/misc_release.yml
@@ -327,6 +327,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu1804-arm64-build
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
 
@@ -482,6 +485,9 @@ buildvariants:
   - name: sharded_multi_stmt_txn_jscore_passthrough
   - name: streams
   - name: .updatefuzzer
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
 
 - name: enterprise-amazon2023
   display_name: "Enterprise Amazon Linux 2023"
@@ -591,6 +597,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu2204-large
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
 
@@ -869,6 +878,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu2204-arm64-large
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
 
@@ -1397,6 +1409,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu2004-package
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: selinux_rhel8_enterprise
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
@@ -1522,6 +1537,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu1804-arm64-build
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
 
@@ -1644,6 +1662,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu2204-large
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: selinux_rhel9_enterprise
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
@@ -1772,6 +1793,9 @@ buildvariants:
   - name: test_packages
     distros:
     - ubuntu2204-arm64-small
+  - name: vector_search
+  - name: vector_search_auth
+  - name: vector_search_ssl
   - name: .publish
   - name: generate_buildid_to_debug_symbols_mapping
 
