--- a/etc/evergreen_yml_components/definitions.yml
+++ b/etc/evergreen_yml_components/definitions.yml
@@ -3196,7 +3196,7 @@ tasks:
       targets: archive-mongo-crypt-dev
       task_compile_flags: >-
         --allocator=system
-        --enterprise-features=fle,search
+        --enterprise-features=fle,search,vector_search
         --js-engine=none
         --link-model=dynamic-sdk
         --enable-http-client=off
@@ -3233,7 +3233,7 @@ tasks:
         --dbg=on
         --opt=off
         --allocator=system
-        --enterprise-features=fle,search
+        --enterprise-features=fle,search,vector_search
         --js-engine=none
         --link-model=dynamic-sdk
         DESTDIR='$BUILD_ROOT/crypt-lib-$MONGO_VERSION'
@@ -3270,7 +3270,7 @@ tasks:
       compiling_for_test: true
       task_compile_flags: >-
         --allocator=system
-        --enterprise-features=fle,search
+        --enterprise-features=fle,search,vector_search
         --js-engine=none
         --link-model=static
         DESTDIR='$BUILD_ROOT/crypt-lib-$MONGO_VERSION'
@@ -7984,6 +7984,33 @@ tasks:
 
 - <<: *task_template
   name: search_ssl
+  tags: []
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_jobs_max: 1
+
+- <<: *task_template
+  name: vector_search
+  tags: []
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_jobs_max: 1
+
+- <<: *task_template
+  name: vector_search_auth
+  tags: []
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_jobs_max: 1
+
+- <<: *task_template
+  name: vector_search_ssl
   tags: []
   commands:
   - func: "do setup"
