--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -1624,7 +1624,7 @@ buildvariants:
         --variables-files=etc/scons/mongodbtoolchain_stable_gcc.vars
         --use-diagnostic-latches=off
         --allocator=system
-        --enterprise-features=fle,search
+        --enterprise-features=fle,search,vector_search
         --js-engine=none
         --link-model=dynamic-sdk
         --enable-http-client=off
