SERVER-78151: Add fsyncLock field to mongos currentOp output
(cherry picked from e2afe5a386fd775500504d7802e54c1aba5223c8)

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -394,6 +394,7 @@ pipelineEnv.Library(
         'lite_parsed_document_source',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/commands/fsync_locked',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/db/concurrency/lock_manager',
         '$BUILD_DIR/mongo/db/dbdirectclient',
