SERVER-79912 Set `checkExistenceForDiffInsert` to true for oplog entry generated from `$_internalApplyOplogUpdate` update
(cherry picked from commit 806f6d42ee6c2d0a8c1cc7079fb589301961124e)
(cherry picked from commit a572a4c8c9be7865f23d57813959e63a7f6e57c4)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -393,6 +393,8 @@ last-continuous:
     ticket: SERVER-78157
   - test_file: jstests/sharding/fsync_lock_unlock.js
     ticket: SERVER-78149
+  - test_file: jstests/core/timeseries/timeseries_buckets_oplog_update.js
+    ticket: SERVER-79912
   suites: null
 last-lts:
   all:
@@ -838,5 +840,7 @@ last-lts:
     ticket: SERVER-78157
   - test_file: jstests/sharding/fsync_lock_unlock.js
     ticket: SERVER-78149
+  - test_file: jstests/core/timeseries/timeseries_buckets_oplog_update.js
+    ticket: SERVER-79912
 
   suites: null
