SERVER-80236 Move all xferMods logic to the recovery unit onCommit callback
(cherry picked from commit 1c690ead56668593cb741aba0a78ba212df74fd1)

--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -184,6 +184,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/dbhelpers',
         '$BUILD_DIR/mongo/db/metadata_consistency_types_idl',
         '$BUILD_DIR/mongo/db/op_observer/op_observer_impl',
+        '$BUILD_DIR/mongo/db/op_observer/op_observer_util',
         '$BUILD_DIR/mongo/db/ops/write_ops_exec',
         '$BUILD_DIR/mongo/db/pipeline/aggregation_request_helper',
         '$BUILD_DIR/mongo/db/repl/abstract_async_component',
