--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -1576,7 +1576,7 @@ buildvariants:
       <<: *compile-expansions
       compile_variant: -arm64
     run_on:
-      - "amazon2-arm64-large"
+      - "amazon2-arm64-xlarge"
     tasks:
       - name: compile
 
@@ -1723,7 +1723,7 @@ buildvariants:
         --use-diagnostic-latches=off
       compile_variant: -rhel70
     run_on:
-      - rhel70-large
+      - rhel70-xlarge
     tasks:
       - name: compile
 
