SERVER-66018 Create read preference metrics counters
(cherry picked from commit 95f8ff78f52cd48415f82d9ee87a96d73c7e3497)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -405,6 +405,8 @@ last-continuous:
     ticket: SERVER-80947
   - test_file: jstests/sharding/delete_range_deletion_tasks_on_dropped_hashed_shard_key_index.js
     ticket: SERVER-80947
+  - test_file: jstests/noPassthrough/read_preference_metrics.js
+    ticket: SERVER-66018
   suites: null
 last-lts:
   all:
@@ -858,4 +860,6 @@ last-lts:
     ticket: SERVER-80947
   - test_file: jstests/sharding/delete_range_deletion_tasks_on_dropped_hashed_shard_key_index.js
     ticket: SERVER-80947
+  - test_file: jstests/noPassthrough/read_preference_metrics.js
+    ticket: SERVER-66018
   suites: null
